@@ -355,7 +355,7 @@ cdef public class _Document [ type LxmlDocumentType, object LxmlDocument ]:
         for prefix, href in nsmap.items():
             href_utf = _utf8(href)
             c_href = _cstr(href_utf)
-            if prefix is not None:
+            if prefix is not None and prefix:
                 prefix_utf = _utf8(prefix)
                 c_prefix = _cstr(prefix_utf)
             else:
